# zeromq

./: Cargo.toml  README.md  notes.md
doc/: .$zmq_structure.drawio.bkp  activity_diagram.puml  class_diagram.puml  cross_references.puml  state_diagram.puml  zmq.txt  zmq_atomic_counter_dec.txt  zmq_atomic_counter_inc.txt  zmq_atomic_counter_set.txt  zmq_atomic_counter_value.txt  zmq_bind.txt  zmq_connect_peer.txt  zmq_ctx_get.txt  zmq_ctx_set.txt  zmq_ctx_set_ext.txt  zmq_curve.txt  zmq_disconnect.txt  zmq_getsockopt.txt  zmq_ipc.txt  zmq_msg_close.txt  zmq_msg_copy.txt  zmq_msg_data.txt  zmq_msg_get.txt  zmq_msg_gets.txt  zmq_msg_init.txt  zmq_msg_init_buffer.txt  zmq_msg_init_data.txt  zmq_msg_init_size.txt  zmq_msg_more.txt  zmq_msg_move.txt  zmq_msg_recv.txt  zmq_msg_routing_id.txt  zmq_msg_send.txt  zmq_msg_set.txt  zmq_msg_set_routing_id.txt  zmq_msg_size.txt  zmq_poller.txt  zmq_ppoll.txt  zmq_proxy.txt  zmq_proxy_steerable.txt  (+11 more)
old/: COPYING  README.doxygen.md  README.orig.md  SupportedPlatforms.md  libzmq_copyright_statement.txt  poller.rs
perf/: benchmark_radix_tree.rs  inproc_lat.rs  inproc_thr.rs  local_lat.rs  local_thr.rs  proxy_thr.rs  remote_lat.rs  remote_thr.rs
src/: address.rs  address_family.rs  address_hdr.rs  allocator.rs  array.rs  array_hdr.rs  atomic_counter.rs  atomic_ptr.rs  atomic_ptr_hdr.rs  blob.hpp  blob.rs  blob_hdr.rs  channel.cpp  channel.rs  channel_hdr.rs  client.rs  client_hdr.rs  clock.rs  clock_hdr.rs  command.rs  compat.rs  compat_hdr.rs  condition_variable.rs  config.rs  content.rs  context.rs  cpu_time.rs  ctx.cpp  ctx.rs  ctx_hdr.rs  curve_client.rs  curve_client_hdr.rs  curve_client_tools.rs  curve_client_tools_hdr.rs  curve_encoding.rs  curve_mechanism_base.rs  curve_mechanism_base_hdr.rs  (+331 more)
(+338 files in other folders)
