[package]
name = "libzmq_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc="0.2"
ipnet="2"
dns-lookup = "1"
gethostname = "0.4"
macaddr = "1"
anyhow = "1"
bincode = "1"
serde = { version="1", features = ["derive"]}

[lib]
name = "zmqrs"
path = "src/lib.rs"
