[package]
name = "zeromq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc="0.2"
ipnet="2"
dns-lookup = "1"
gethostname = "0.4"
macaddr = "1"
anyhow = "1"
bincode = "1"
serde = { version="1", features = ["derive"]}
cpu-time = "1.0.0"
serde_bytes = "0.11.9"

[lib]
name = "zeromq"
path = "src/lib.rs"

[features]
vmci = []
