[package]
name = "zeromq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
ipnet = "2"
dns-lookup = "1"
gethostname = "0.4"
macaddr = "1"
anyhow = "1"
bincode = "1"
serde = { version = "1", features = ["derive"] }
cpu-time = "1.0.0"
serde_bytes = "0.11.9"
windows = { version = "0.48.0", features = ["Win32_Networking_WinSock", "Win32_Foundation", "Win32_System_Threading", "Win32_Security", "Win32_NetworkManagement_IpHelper", "Win32_NetworkManagement_Ndis"] }
chrono = "0.4.24"
trie-rs = "0.1.1"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["net"] }

[lib]
name = "zeromq"
path = "src/lib.rs"

[features]
default = ["poll", "fork"]
vmci = []
poll = []
select = []
fork = []
eventfd = []
